# Cloud_file_storage

./: .dockerignore  Dockerfile.prod  README.md  docker-compose-qwe.yaml  docker-compose.yaml  pyproject.toml
cloud_storage/cloud/: admin.py  apps.py  models.py  urls.py
cloud_storage/cloud/s3_service/: exceptions.py  s3_client.py  s3_service.py  validators.py
cloud_storage/cloud/templates/cloud/: base.html
cloud_storage/cloud/templates/cloud/includes/: header.html  pagination.html
cloud_storage/cloud/templates/cloud/layouts/: index.html  search.html  shared_files.html
cloud_storage/cloud/tests/test_s3_service/: base_test_class.py  test_s3_service_files.py  test_s3_service_folders.py
cloud_storage/cloud/views/: main_page_view.py  object_handling_view.py  search_page_view.py  share_file_view.py
cloud_storage/config/: settings.py  urls.py
cloud_storage/static/cloud/js/: object_actions.js  register_handlers.js
cloud_storage/users/: urls.py  views.py
cloud_storage/users/templates/registration/: base.html  login.html  register.html
docker/nginx/: nginx.conf
