[tool.poetry]
name = "cloud-storage"
version = "0.1.0"
description = ""
authors = ["Vladislav"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
django = "^5.1.4"
redis = "^5.2.1"
python-decouple = "^3.8"
django-bootstrap5 = "^24.3"
minio = "^7.2.14"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
